Update issue templates

--- a/.github/ISSUE_TEMPLATE/개발-작업-및-기능-요청.md
+++ b/.github/ISSUE_TEMPLATE/개발-작업-및-기능-요청.md
@@ -2,7 +2,7 @@
 name: 개발 작업 및 기능 요청
 about: 기능 구현, 개선 요청, 리팩토링 등 작업 전반을 기록합니다.
 title: "[TASK]"
-labels: bug
+labels: dev-task, feature-request
 assignees: ''
 
 ---
