Update issue templates

--- a/.github/ISSUE_TEMPLATE/개발-작업-및-기능-요청-탬플릿-있는-버전-.md
+++ b/.github/ISSUE_TEMPLATE/개발-작업-및-기능-요청-탬플릿-있는-버전-.md
@@ -1,8 +1,8 @@
 ---
-name: 개발 작업 및 기능 요청
+name: 개발 작업 및 기능 요청(탬플릿 있는 버전)
 about: 기능 구현, 개선 요청, 리팩토링 등 작업 전반을 기록합니다.
-title: "[TASK]"
-labels: dev-task, feature-request
+title: "[FEAT] 배치씬에서 인접효과 시스템 구현"
+labels: ''
 assignees: ''
 
 ---
