[fix] 타일 제작 #84
스테이지 시스템을 가라로 완성했습니다. 리롤 텍스트를 리롤(1G)로 수정하였습니다. 스테이지 시스템에 따라서 변동하는 확률 표를 작성했습니다.

--- a/Assets/@Cosmos/Localization/TextCSV/NotTileText.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/NotTileText.csv
@@ -1,5 +1,5 @@
 ﻿Key,Chinese (Simplified)(zh),English(en),Japanese(ja),Korean(ko)
-But_REROLL,重抽,REROLL,リロール,리롤
+But_REROLL,重抽(1G),REROLL(1G),リロール(1G),리롤(1G)
 But_Start,开始,Start,スタート,시작
 But_Back,返回,Back,戻る,돌아가기
 Text_Gold,金币,Gold,ゴールド,골드
