--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
@@ -326,13 +326,9 @@ Tile_TileTagDescription_Mark,"<sprite name=\""Mark\"">: 使你下次攻击受到
 Tile_TileTagDescription_Curse,"Curse<sprite name=\""Curse\"">：诅咒物品使用的资源。默认限制为 30。","Curse<sprite name=\""Curse\"">: A resource used by Curse items. The default limit is 30.","呪い<sprite name=\""Curse\"">: 呪いアイテムが使用するリソースです。","저주<sprite name=\""Curse\"">: 저주 아이템들이 사용하는 자원입니다. 기본적인 한도는 30입니다."
 ,,,,
 UI_Quest_Instruction1,"指南 1
-
 ㄴ 移动角色
-
 ({0}/5)","Guide 1
-
 ㄴ Move the character
-
 ({0}/5)","ガイド1 
 ㄴキャラクターを動かす 
 ({0}/5)","가이드 1 
@@ -348,9 +344,9 @@ UI_Quest_Instruction2,"指南 2
 ㄴ 10초간 생존하세요
 ({0}/10초)"
 UI_Quest_Instruction3,"指南 3
-n 安装星座
+ㄴ 安装星座
 ({0}/5)","Guide 3
-n Install the constellation
+ㄴ Install the constellation
 ({0}/5)","ガイド3
 ㄴ星座を設置する
 ({0}/5個)","가이드 3
@@ -411,10 +407,8 @@ UI_Quest_SubTitle7,赢得,To win,勝つ,승리하기
 ,,,,
 UI_Quest_Content1,"角色可以通过
 WASD 或 ↑↓←→ 移动
-
 尝试移动角色","The character can be moved with
 WASD or ↑↓←→
-
 Try moving the character","キャラクターは
 WASDまたは↑↓←→
 で動くことができます 
@@ -428,11 +422,8 @@ Avoid enemy attacks and survive","敵はあなたを攻撃します
 敵の攻撃を避けて生き残る","적은 당신을 공격합니다
 적의 공격을 피해 살아남으세요"
 UI_Quest_Content3,"星座可以通过支付金币从底部商店购买
-
 将星座从商店拖放到该区域","Constellations can be purchased from the bottom shop
-
 by paying gold
-
 Drag the constellation from the shop to place it in the area","星座は下の店で 
 ゴールドを支払う 
 購入できます
@@ -482,21 +473,15 @@ the constellation is sold and you can earn gold.","星座ドラッグ中
 별자리가 판매되고 
 골드를 획득할 수 있습니다"
 UI_Quest_Content7,"准备战斗后，
-
 点击右下角的[开始战斗]
-
 开始战斗
 
 并踩上星座
-
 攻击敌人并获胜","After you're ready for battle,
-
 press [Start Battle] at the bottom right
-
 to start the battle
 
 and step on the constellations
-
 to attack the enemy and win","戦闘準備を終えて
 右下の[戦闘開始]
 タップして戦闘を始める
@@ -509,7 +494,8 @@ to attack the enemy and win","戦闘準備を終えて
 그리고 별자리를 밟아 
 적을 공격해 승리하세요"
 ,,,,
-UI_Quest_Goal1,- 完成条件 - 移动角色 (0/5),- Completion Conditions - Move Character (0/5),#NAME?,"- 완료 조건 -
+UI_Quest_Goal1,- 完成条件 - 移动角色 (0/5),- Completion Conditions - Move Character (0/5),"- 完了条件 -
+キャラクターを移動する（0/5）","- 완료 조건 -
 캐릭터 이동하기 (0/5)"
 UI_Quest_Goal2,- 完成条件 - 存活 10 秒 (0/10 秒),- Completion Conditions - Survive for 10 seconds (0/10 seconds),"- 完了条件 -
 10秒間生き残る（0/10秒）","- 완료 조건 -
@@ -517,7 +503,8 @@ UI_Quest_Goal2,- 完成条件 - 存活 10 秒 (0/10 秒),- Completion Conditions
 UI_Quest_Goal3,- 完成条件 - 安装 5 个星座 (0/5),- Completion Conditions - Install 5 constellations (0/5),"- 完了条件 -
 星座5個を設置する（0/5個）","- 완료 조건 -
 별자리 5개 설치하기 (0/5개)"
-UI_Quest_Goal4,- 完成条件 - 旋转星座 (0/5),- Completion Conditions - Rotate the Constellation (0/5),#NAME?,"- 완료 조건 -
+UI_Quest_Goal4,- 完成条件 - 旋转星座 (0/5),- Completion Conditions - Rotate the Constellation (0/5),"- 完了条件 -
+星座を回転させる（0/5）","- 완료 조건 -
 별자리 회전시키기 (0/5)"
 UI_Quest_Goal5,- 完成条件 - 储存 4 个星座 (0/4),"- Completion Conditions -
 Store 4 constellations (0/4)","- 完了条件 -
@@ -528,10 +515,11 @@ Sell 4 constellations (0/4)","- 完了条件 -
 星座を4個販売する（0/4個）","- 완료 조건 -
 별자리 4개 판매하기 (0/4개)"
 UI_Quest_Goal7,- 完成条件 - 赢得战斗 (0/1),"- Completion Conditions -
-Win the Battle (0/1)",#NAME?,"- 완료 조건 -
+Win the Battle (0/1)","- 完了条件 -
+戦闘勝利(0/1)","- 완료 조건 -
 전투 승리 (0/1)"
-UI_Button_FinalBossRetry,最终 Boss 再次挑战,Final Boss Re-challenge,最後のボス再挑戦,마지막 보스 재도전
 ,,,,
+UI_Button_FinalBossRetry,最终 Boss 再次挑战,Final Boss Re-challenge,最後のボス再挑戦,마지막 보스 재도전
 UI_Button_Reroll,"刷新 (1G)
 快捷键：D","Refresh (1G)
 Shortcut: D","リフレッシュ(1G)
@@ -561,3 +549,21 @@ UI_Text_BGMVolume,音乐音量,music volume,音楽ボリューム,음악 볼륨
 UI_Text_SoundEffectVolume,音效音量,Sound effect volume,エフェクト音量,효과음 볼륨
 UI_Text_OpportunityLeft,剩余机会,remaining opportunities,残りのチャンス,남은 기회
 UI_Text_GameClear,清除,Clear,クリア,클리어
+UI_Text_QuestEnd_Title,- 指南完成 -,- Guide Complete -,- ガイド完了 -,- 가이드 완료 -
+UI_Text_QuestEnd_Content,"您已完成所有指南
+强大的敌人正在等着您
+放置众多星座
+与敌人战斗并取得胜利","You have completed all the guides
+Very powerful enemies await you
+Place numerous constellations
+Fight the enemies and win","すべてのガイドを進めました
+非常に強力な敵があなたを待っています
+多数の星座を配置し、 
+敵と戦って勝つ","모든 가이드를 진행했습니다
+매우 강력한 적들이 당신을 기다립니다
+수많은 별자리를 배치하고 
+적들과 싸워 승리하세요"
+UI_Text_QuestEnd_Lose,- 失败 -,- Defeat -,-敗北-,- 패배 -
+UI_Text_QuestEnd_Restart,放置更多星座并重试,Place more constellations and try again,"もっと星座を配置する
+再挑戦してみてください","더 많은 별자리를 배치해
+재도전 해보세요"
