--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
@@ -97,8 +97,8 @@ Tile_TileDescription_DamageTotemTile,"堆叠图腾 <sprite name=""Totem"">。堆
  （ダメージ：<color=red>呪い<sprite name=""Curse"">カウント（最小1）</color>）
  
  <color=yellow>星<sprite name=""Star"">に位置する</color>召喚獣<sprite name=""Summon"">ごとにクールタイムが10%減少します。","토템<sprite name=""Totem"">을 쌓습니다. 3개의 토템<sprite name=""Totem"">이 쌓이면 발동합니다.
-<color=yellow>발동시</color>: 저주<sprite name=""Curse"">를 1 부여합니다. 
-<color=yellow>강화시</color>: 저주<sprite name=""Curse"">를 1 부여하고 적에게 부여된 저주<sprite name=""Curse""> 개수에 비례해 피해가 증가하는 투사체를 발사합니다.
+<color=yellow>발동 시</color>: 저주<sprite name=""Curse"">를 1 부여합니다. 
+<color=yellow>강화 시</color>: 저주<sprite name=""Curse"">를 1 부여하고 적에게 부여된 저주<sprite name=""Curse""> 개수에 비례해 피해가 증가하는 투사체를 발사합니다.
 (피해량: <color=red>저주<sprite name=""Curse""> 개수 (최소 1)</color>) 
 <color=yellow>별<sprite name=""Star"">에 위치한</color> 소환수<sprite name=""Summon"">마다 쿨타임이 10% 감소합니다."
 Tile_TileDescription_FireBallTile,"发射 3 枚投射物。
@@ -121,7 +121,7 @@ Tile_TileDescription_FireBallTile,"发射 3 枚投射物。
  
   <color=yellow>星<sprite name=""Star"">に位置する</color>魔法陣<sprite name=""MagicCircle"">が3つ以上の場合、1つの弾をさらに発射します。","3개의 투사체를 발사합니다.
 (피해량: <color=red>8</color>)
-<color=yellow>적중시</color>: 화염<sprite name=""Fire"">을 부여합니다.
+<color=yellow>적중 시</color>: 화염<sprite name=""Fire"">을 부여합니다.
 <color=yellow>별<sprite name=""Star"">에 위치한</color> 마법진<sprite name=""MagicCircle"">이 3개 이상이라면, 1개의 투사체를 더 발사합니다."
 Tile_TileDescription_FireBoltTile,"发射一枚投射物。
  
@@ -609,7 +609,7 @@ UI_Quest_Instruction1,"指南 1
  
   -キャラクターを動く
  
-  ({0}/5)","가이드 1 
+  ({0}/5)","튜토리얼 1
 - 캐릭터를 움직이세요 
 ({0}/5)"
 UI_Quest_Instruction2,"指南 2
@@ -624,7 +624,7 @@ UI_Quest_Instruction2,"指南 2
  
   - 10秒間生き残る
  
-  ({0}/10秒)","가이드 2
+  ({0}/10秒)","튜토리얼 2
 - 10초간 생존하세요
 ({0}/10초)"
 UI_Quest_Instruction3,"指南 3
@@ -639,7 +639,7 @@ UI_Quest_Instruction3,"指南 3
  
   - 星座を設置する
  
-  ({0}/5個)","가이드 3
+  ({0}/5個)","튜토리얼 3
 - 별자리를 설치하고 
 별을 활성화 하세요
 (설치 {0}/3개)  (별 {1}/3개)"
@@ -655,7 +655,7 @@ UI_Quest_Instruction4,"指南 4
  
   - 星座を回転させる
  
-  ({0}/5個)","가이드 4
+  ({0}/5個)","튜토리얼 4
 - 별자리를 회전시켜보세요
 ({0}/5개)"
 UI_Quest_Instruction5,"指南 5
@@ -670,7 +670,7 @@ UI_Quest_Instruction5,"指南 5
  
   - 星座を保管する
  
-  ({0}/4個)","가이드 5
+  ({0}/4個)","튜토리얼 5
 - 별자리를 보관해보세요
 ({0}/4개)"
 UI_Quest_Instruction6,"指南6
@@ -685,7 +685,7 @@ UI_Quest_Instruction6,"指南6
  
   - 星座を販売する
  
-  （{0}/4個）","가이드 6
+  （{0}/4個）","튜토리얼 6
 - 별자리를 판매해보세요
 ({0}/4개)"
 UI_Quest_Instruction7,"指南 7
@@ -700,17 +700,17 @@ UI_Quest_Instruction7,"指南 7
  
   -敵と戦って勝利する
  
-  ({0}/1)","가이드 7
+  ({0}/1)","튜토리얼 7
 - 적과 싸워 승리하세요
 ({0}/1)"
 ,,,,
-UI_Quest_Title1,- 指南 1 -,- Guide 1 -,- ガイド 1 -,- 가이드 1 -
-UI_Quest_Title2,- 指南 2 -,- Guide 2 -,- ガイド 2 -,- 가이드 2 -
-UI_Quest_Title3,- 指南 3 -,- Guide 3 -,- ガイド 3 -,- 가이드 3 -
-UI_Quest_Title4,- 指南 4 -,- Guide 4 -,- ガイド 4 -,- 가이드 4 -
-UI_Quest_Title5,- 指南 5 -,- Guide 5 -,- ガイド 5 -,- 가이드 5 -
-UI_Quest_Title6,- 指南 6 -,- Guide 6 -,- ガイド 6 -,- 가이드 6 -
-UI_Quest_Title7,- 指南 7 -,- Guide 7 -,- ガイド 7 -,- 가이드 7 -
+UI_Quest_Title1,- 指南 1 -,- Guide 1 -,- ガイド 1 -,튜토리얼 1
+UI_Quest_Title2,- 指南 2 -,- Guide 2 -,- ガイド 2 -,튜토리얼 2
+UI_Quest_Title3,- 指南 3 -,- Guide 3 -,- ガイド 3 -,튜토리얼 3
+UI_Quest_Title4,- 指南 4 -,- Guide 4 -,- ガイド 4 -,튜토리얼 4
+UI_Quest_Title5,- 指南 5 -,- Guide 5 -,- ガイド 5 -,튜토리얼 5
+UI_Quest_Title6,- 指南 6 -,- Guide 6 -,- ガイド 6 -,튜토리얼 6
+UI_Quest_Title7,- 指南 7 -,- Guide 7 -,- ガイド 7 -,튜토리얼 7
 ,,,,
 UI_Quest_SubTitle1,移动,Move,移動する,이동하기
 UI_Quest_SubTitle2,存活,Survive,生き残る,살아남기
@@ -763,9 +763,9 @@ UI_Quest_Content3,"星座可以通过支付金币从底部商店购买
   クリックしたまま移動し配置してください","별자리는 하단 상점에서 
 구매할 수 있습니다
 
-각 별자리는 고유의 별을 
-가지고 있어 각 타일의 조건을 
-달성시 별자리가 강화됩니다. 
+각 별자리는 고유의 별을 가지고 있어 
+각 별자리의 조건을 달성시 
+별자리가 강화됩니다. 
 
 상점에서 별자리를 
 드래그 하여 영역에 설치하세요"
