[FIX]난이도 설명 추가

--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
@@ -991,3 +991,27 @@ UI_Text_QuestEnd_Restart,放置更多星座并重试,Place more constellations a
 UI_Text_Language,语言,Language,言語,언어
 UI_Text_Playtutorial,您想观看教程吗？,Would you like to watch the tutorial?,チュートリアルを見ますか？,튜토리얼을 보시겠습니까?
 UI_Text_LevelSetting,选择难度,Select difficulty,難易度を選択してください,난이도를 선택하세요
+UI_Text_EasyDescription,<color=green>Boss攻击速度降低30%</color>,<color=green>Boss attack speed reduced by 30%</color>,<color=green>ボス攻撃速度30%減少</color>,<color=green>보스 공격 속도 30% 감소</color>
+UI_Text_NomalDescription,标准难度,Standard Difficulty,基準難易度,기준 난이도
+UI_Text_HardDescription,"<color=red>完成普通难度时解锁
+Boss攻击速度增加30%
+Boss生命值增加30%","<color=red>Unlocked when clearing Normal Difficulty
+Boss attack speed increased by 30%
+Boss health increased by 30%","<color=red>通常難易度クリア時解禁
+ボス攻撃速度30%増加
+ボス体力30％増加","<color=red>보통 난이도 클리어 시 해금
+보스 공격 속도 30% 증가
+보스 체력 30% 증가"
+UI_Text_HellDescription,"<color=red>普通难度通关后解锁
+Boss攻击速度提升30%
+Boss生命值提升50%
+玩家初始生命值为1（最大生命值为100）</color>","<color=red>Unlocked when cleared on Normal difficulty
+Boss attack speed increased by 30%
+Boss health increased by 50%
+Player starts with 1 health (max health is 100)</color>","<color=red>通常難易度クリア時解禁
+ボス攻撃速度30%増加
+ボス体力50％増加
+プレイヤースタートフィットネス1（最大体力は100）</color>","<color=red>보통 난이도 클리어 시 해금
+보스 공격 속도 30% 증가
+보스 체력 50% 증가
+플레이어 시작 체력 1 (최대 체력은 100)</color>"
