[fix] 거북이 전투 개시시 텍스트 수정

--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
@@ -314,7 +314,7 @@ Cooldown is reduced by 10% for each summon <sprite name=""Summon""><color=yellow
 <color=yellow>별<sprite name=""Star"">에 위치한</color> 소환수<sprite name=""Summon"">마다 쿨타임이 10% 감소합니다."
 Tile_TileDescription_TurtleTile,"<color=yellow>战斗开始时</color>：召唤一只消耗<sprite name=""Barrier"">护盾的乌龟。乌龟每秒消耗3个<sprite name=""Barrier"">护盾。
 <color=yellow>保护盾<sprite name=""Barrier"">时</color>：伤害增加为消耗护盾的3倍。（<color=red>最高45</color>）
-<color=yellow>触发时</color>：发射一只乌龟。（伤害：<color=red>吸收3倍保护盾</color>）","<color=yellow>At the start of combat</color>: Summon a turtle that consumes <sprite name=""Barrier""> shields. The turtle consumes 3 <sprite name=""Barrier""> shields per second.
+<color=yellow>触发时</color>：发射一只乌龟。（伤害：<color=red>吸收3倍保护盾</color>）","<color=yellow>Start of battle</color>: Summon a turtle that consumes <sprite name=""Barrier""> shields. The turtle consumes 3 <sprite name=""Barrier""> shields per second.
 <color=yellow>When Barrier<sprite name=""Barrier""> is consumed</color>: Damage increases by 3 times the consumed shields. (<color=red>Maximum 45</color>)
 <color=yellow>When activated</color>: Launch a turtle. (Damage: <color=red>absorbed Barrier X 3</color>)","<color=yellow>戦闘開始時</color>: シールド<sprite name=""Barrier"">を消費するカメを召喚します。カメは毎秒3の保護膜<sprite name=""Barrier"">を消費します。
 <color=yellow>バリア<sprite name=""Barrier"">消耗時</color>: ダメージが消耗した保護膜の3倍だけ上昇します。 (<color=red>最大 45</color>)
