[fix]게임 시작을 영어로 시작하게 수정

--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
@@ -267,6 +267,7 @@ Mana AI appears in the shop.
 店にマナAIが登場します。 
 (ダメージ：<color=red>15</color>）","<color=red>밟아서 발동시킬 수 없습니다. 통과할 수 없습니다.</color>
 <color=yellow>별<sprite name=""Star"">에 위치한</color> 무기<sprite name=""Weapon""> 발동 시 함께 공격합니다.
+상점에 마나AI가 등장합니다. 
 (피해량: <color=red>15</color>)"
 Tile_TileDescription_NecronomiconTile,"发射一枚投射物，造成的伤害与敌人受到的诅咒<sprite name=""Curse"">数量成正比。
 (伤害：<color=red>诅咒<sprite name=""Curse"">（最低1级）</color>)
