[feat] 라이센스 버튼 로컬라이징 추가

--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
@@ -687,6 +687,8 @@ UI_Button_CheckGameGiveUp,放弃游戏,"Give up
 the game",ゲームを放棄する,게임 포기
 UI_Button_CheckGameContinue,继续游戏,"Continue 
 the game",ゲームを続ける,게임 계속
+UI_Button_Back,返回 ,Back,戻る,돌아가기
+UI_Button_License,授权,License,ライセンス,라이선스
 ,,,,
 UI_Text_ProbabilityTable,概率表,Probability Table,確率表,확률표
 UI_Text_Resolution,解决,Resolution,解像度,해상도
