[fix] 자세한 사항 버튼 로컬라이징

--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
@@ -691,6 +691,11 @@ UI_Button_Back,返回 ,Back,戻る,돌아가기
 UI_Button_License,授权,License,ライセンス,라이선스
 UI_Button_DataSaveYas,协议,OK ,同意,동의
 UI_Button_DataSaveNo,拒绝,NO,拒否,거절
+UI_Button_DataSaveMore,"详细信息
+(Steam)","Learn More 
+(Steam)","詳しく
+(Steam)","자세히
+(Steam)"
 ,,,,
 UI_Text_ProbabilityTable,概率表,Probability Table,確率表,확률표
 UI_Text_Resolution,解决,Resolution,解像度,해상도
