[fix] 마지막보스 재시도 텍스트 수정

--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
@@ -696,6 +696,7 @@ UI_Button_DataSaveMore,"详细信息
 (Steam)","詳しく
 (Steam)","자세히
 (Steam)"
+UI_Button_OneTimeMore,再来一次…,One More Time…,もう一回…,한번만 더…
 ,,,,
 UI_Text_ProbabilityTable,概率表,Probability Table,確率表,확률표
 UI_Text_Resolution,解决,Resolution,解像度,해상도
