--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징.csv
@@ -407,19 +407,16 @@ Tile_TileSynergy_Cloud,"<color=white>#云<sprite name=""Cloud""></color>","<colo
 Tile_TileSynergy_Nebula,"<color=white>#星云(N)<sprite name=""Nebula""></color>","<color=white>#Nebula(N)<sprite name=""Nebula""></color>","<color=white>#星雲(N)<sprite name=""Nebula""></color>","<color=white>#성운(N)<sprite name=""Nebula""></color>"
 ,,,,
 Tile_TileTagDescription_Fire,"火焰<sprite name=""Fire"">：每秒造成相当于堆叠数量的伤害，并将堆叠数量减少 1。","Burn<sprite name=""Fire"">: Deals damage equal to the stack per second and reduces the stack by 1.","炎 <sprite name=""Fire"">: 毎秒スタックと同じダメージを与え、スタックが 1 減少します。","화염<sprite name=""Fire"">: 매초 스택만큼 피해를 주고 스택이 1 감소합니다."
-Tile_TileTagDescription_Ice,"冻伤<sprite name=""Ice"">: 堆叠 10 次后，冻结敌人 2 秒。","Frostbite<sprite name=""Ice"">: When stacked 10 times, freezes enemies for 2 seconds.","凍傷 <sprite name=""Ice"">: 10回重複すると、敵を2秒間氷結させます。","동상<sprite name=""Ice"">: 10번 중첩되면,적을 2초동안 빙결시킵니다."
+Tile_TileTagDescription_Ice,"冻伤<sprite name=""Ice"">: 堆叠 10 次后，冻结<sprite name=""Freeze"">敌人 2 秒。","Frostbite<sprite name=""Ice"">: When stacked 10 times, freezes<sprite name=""Freeze""> enemies for 2 seconds.","凍傷 <sprite name=""Ice"">: 10回重複すると、敵を2秒間氷結<sprite name=""Freeze"">させます。","동상<sprite name=""Ice"">: 10번 중첩되면,적을 2초동안 빙결<sprite name=""Freeze"">시킵니다."
 Tile_TileTagDescription_Sword,"剑<sprite name=""Sword"">：召唤生物，持续一定时间。当你向一把剑发出命令时，所有剑都会执行相同的命令。","Sword<sprite name=""Sword"">: Temporarily summoned. All swords follow the same command.","剣<sprite name=""Sword"">: 一定時間維持される召喚獣。剣を発行すると、すべての剣が同じコマンドを実行します。","검<sprite name=""Sword"">: 일정시간 동안 유지되는 소환수입니다. 검에게 명령을 내리면 모든 검이 동일한 명령을 수행합니다."
 Tile_TileTagDescription_Totem,"图腾<sprite name=""Totem"">：当3个图腾叠加时，触发效果并消失。叠加的第3个图腾的效果会强化。","Totem<sprite name=""Totem"">: Activates when 3 stack. The 3rd totem's effect is enhanced.","トーテム <sprite name=""Totem"">: トーテムが3つ積み重なると効果を発動して消えます。","토템<sprite name=""Totem"">: 토템이 3개 쌓이면 효과를 발동하고 사라집니다. 3번째로 올라간 토템의 효과는 강화됩니다."
 Tile_TileTagDescription_Shield,"盾牌<sprite name=""Shield"">：阻挡 1 轮伤害。","Shield<sprite name=""Shield"">: Blocks 1 round of damage.","シールド <sprite name=""Shield"">: 1 回のダメージを防ぎます。","방어막<sprite name=""Shield"">: 1회의 피해를 막아줍니다."
-Tile_TileTagDescription_Barrier,"保护盾<sprite name=""Barrier"">：阻挡一定量的伤害。每秒吸收2点护盾。
-保护盾重复的屏障时，将以较高的数值进行更新。","Barrier<sprite name=""Barrier"">: Blocks a certain amount of damage. Consumes 2 per second.
-When acquiring a duplicate barrier, it will be updated to the higher value.","バリア<sprite name=""Barrier"">: 一定量のダメージを防ぎます。毎秒2消費します。
-バリアを重複して獲得した場合、高い数値に更新されます。","보호막<sprite name=""Barrier"">: 일정량의 피해를 막아줍니다. 매초 2 소모됩니다.
-중복 보호막 획득 시 높은 값으로 갱신됩니다."
+Tile_TileTagDescription_Barrier,"保护盾<sprite name=""Barrier"">：阻挡一定量的伤害。每秒吸收2点护盾。保护盾重复的屏障时，将以较高的数值进行更新。","Barrier<sprite name=""Barrier"">: Blocks a certain amount of damage. Consumes 2 per second. When acquiring a duplicate barrier, it will be updated to the higher value.","バリア<sprite name=""Barrier"">: 一定量のダメージを防ぎます。毎秒2消費します。バリアを重複して獲得した場合、高い数値に更新されます。","보호막<sprite name=""Barrier"">: 일정량의 피해를 막아줍니다. 매초 2 소모됩니다. 중복 보호막 획득 시 높은 값으로 갱신됩니다."
 Tile_TileTagDescription_Pain,"痛苦<sprite name=""Pain"">：受到的伤害增加 10%。","Pain<sprite name=""Pain"">: Damage taken increases by 10%.","痛み<sprite name=""Pain"">: 受けるダメージが10%増加します。","고통<sprite name=""Pain"">: 받는 피해가 10% 증가합니다."
 Tile_TileTagDescription_Mark,"印记<sprite name=""Mark"">: 使你下次攻击受到的伤害提高 50%。(最多1个)","Mark<sprite name=""Mark"">: Increases the damage taken from your next attack by 50%. (Maximum 1)","烙印 <sprite name=""Mark"">: 次の攻撃 1 回のダメージを 50% 増加して受けます。(最大1)","낙인<sprite name=""Mark"">: 다음 공격 한 번의 피해를 50% 증가하여 받습니다.(최대 1)"
 Tile_TileTagDescription_Curse,"诅咒<sprite name=""Curse"">：诅咒物品使用的资源。默认限制为 30。","Curse<sprite name=""Curse"">: A resource used by Curse items. The default limit is 30.","呪い<sprite name=""Curse"">: 呪いアイテムが使用するリソースです。","저주<sprite name=""Curse"">: 저주 아이템들이 사용하는 자원입니다. 기본적인 한도는 30입니다."
 Tile_TileTagDescription_Nebula,"星云(N)<sprite name=""Nebula"">：结合了 N 个星座的结构，每个星座都有独立的能力和冷却时间。","Nebula(N)<sprite name=""Nebula"">: A structure that combines N constellations, each with independent abilities and cooldowns.","星雲(N)<sprite name=""Nebula"">: N個の星座が結合された構造で、各星座は独立した能力とクールタイムを持ちます。","성운(N)<sprite name=""Nebula"">: N개의 별자리가 결합된 구조로, 각 별자리는 독립적인 능력과 쿨타임을 가집니다."
+Tile_TileTagDescription_Freeze,"冰冻<sprite name=""Freeze"">：无法攻击，受到的伤害增加50%。","Freeze<sprite name=""Freeze"">: Unable to attack and damage taken is increased by 50%.","氷結<sprite name=""Freeze"">：攻撃できず、受けるダメージが50%増加します。","빙결<sprite name=""Freeze"">: 적이 모든 공격을 멈추고 받는 피해가 50% 증가합니다. 일부 적의 공격은 멈출 수 없습니다. "
 ,,,,
 UI_Quest_Instruction1,"教程 1
 - 移动角色
