[fix]저장관련 로컬라이징 텍스트 수정

--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징_언어추가.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징_언어추가.csv
@@ -945,8 +945,8 @@ UI_Button_Hard,难的,Hard,ハード,어려움,困難,Сложный
 UI_Button_VeryHard,地狱,Hell,地獄,지옥,地獄,Ад
 UI_Button_Setting,设置,SETTING,設定,환경 설정,環境設定,Настройки
 UI_Button_Exit,退出游戏,EXIT GAME,ゲーム終了,게임 종료,遊戲結束,Завершить игру
-UI_Button_CheckGameGiveUp,放弃游戏,"Give up 
-the game",ゲームを放棄する,게임 포기,放棄遊戲,Сдаться
+UI_Button_CheckGameGiveUp,保存游戏,Save Game,ゲームをセーブする,게임 저장,儲存遊戲,"Сохранить 
+игру"
 UI_Button_CheckGameContinue,继续游戏,"Continue 
 the game",ゲームを続ける,게임 계속,繼續遊戲,Продолжить игру
 UI_Button_Back,返回 ,Back,戻る,돌아가기,返回,Назад
@@ -1057,12 +1057,12 @@ Clear {0} stage.","解禁条件
 通關{0}關卡。","Условие разблокировки
 
 Пройти {0} стадию."
-UI_Text_CheckGameTitle,放弃游戏并返回标题。（游戏将不会保存。）,"Give up the game and return to the title. 
-(The game will not be saved.)","ゲームを放棄してタイトルに戻ります。
-（ゲームは保存されません。）","게임을 포기하고 타이틀로 돌아갑니다.
-(게임이 저장되지 않습니다.)","放棄遊戲並回到標題。
-(遊戲不會儲存。)","Бросить игру и вернуться к титрам.
-(Игра не будет сохранена.)"
+UI_Text_CheckGameTitle,保存游戏并返回标题界面。,"Save the game and return to the title screen.
+","ゲームをセーブしてタイトル画面に戻ります。
+","게임을 저장하고 타이틀로 돌아갑니다.
+","儲存遊戲並返回標題畫面。
+","Сохранить игру и вернуться в главное меню.
+"
 UI_Text_ClearText,感谢您游玩本游戏！,Thank you for playing!,"プレイしていただき
 ありがとうございます！","플레이 해주셔서 
 감사합니다!",感謝您的遊玩！,Спасибо за игру!
