--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징_언어추가.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징_언어추가.csv
@@ -1063,6 +1063,12 @@ UI_Text_CheckGameTitle,保存游戏并返回标题界面。,"Save the game and r
 ","儲存遊戲並返回標題畫面。
 ","Сохранить игру и вернуться в главное меню.
 "
+UI_Text_NoSaveGameTitle,放弃游戏并返回标题。（游戏将不会保存。）,"Give up the game and return to the title. 
+(The game will not be saved.)","ゲームを放棄してタイトルに戻ります。
+（ゲームは保存されません。）","게임을 포기하고 타이틀로 돌아갑니다.
+(게임이 저장되지 않습니다.)","放棄遊戲並回到標題。
+(遊戲不會儲存。)","Бросить игру и вернуться к титрам.
+(Игра не будет сохранена.)"
 UI_Text_ClearText,感谢您游玩本游戏！,Thank you for playing!,"プレイしていただき
 ありがとうございます！","플레이 해주셔서 
 감사합니다!",感謝您的遊玩！,Спасибо за игру!
