[fix] 게임 포기 다시 만듬

--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징_언어추가.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징_언어추가.csv
@@ -945,6 +945,8 @@ UI_Button_Hard,难的,Hard,ハード,어려움,困難,Сложный
 UI_Button_VeryHard,地狱,Hell,地獄,지옥,地獄,Ад
 UI_Button_Setting,设置,SETTING,設定,환경 설정,環境設定,Настройки
 UI_Button_Exit,退出游戏,EXIT GAME,ゲーム終了,게임 종료,遊戲結束,Завершить игру
+UI_Button_NoSaveGameGiveUp,放弃游戏,"Give up 
+the game",ゲームを放棄する,게임 포기,放棄遊戲,Сдаться
 UI_Button_CheckGameGiveUp,保存游戏,Save Game,ゲームをセーブする,게임 저장,儲存遊戲,"Сохранить 
 игру"
 UI_Button_CheckGameContinue,继续游戏,"Continue 
