[feat] 데미지 로컬라이징 추가

--- a/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징_언어추가.csv
+++ b/Assets/@Cosmos/Localization/TextCSV/에픽프로젝트_로컬라이징_언어추가.csv
@@ -39,6 +39,7 @@ Tile_TileName_WandTile,魔杖,Wand,魔法使いの棒,완드,魔杖,Жезл
 Tile_TileName_MoaiTotemTile,古代图腾,Ancient Totem,古代トーテム,고대 토템,古代圖騰,Древний тотем
 Tile_TileName_MagmaBladeTile,熔岩之刃,Lava Blade,溶岩の刃,용암 칼날,熔岩刀刃,Лавовое лезвие
 Tile_TileName_CatTile,猫巫师,Cat Wizard,魔法使い猫,고양이 마법사,貓法師,Кот-маг
+Tile_TileName_Fire,"<color=#DB444C>火焰<sprite name=""Fire""></color>","<color=#DB444C>Burn<sprite name=""Fire""></color>","<color=#DB444C>炎<sprite name=""Fire""></color>","<color=#DB444C>화염<sprite name=""Fire""></color>","<color=#DB444C>火焰<sprite name=""Fire""></color>","<color=#DB444C>Пламя<sprite name=""Fire""></color>"
 ,,,,,,
 Tile_TileDescription_ArchmageStaffTile,"发射强力投射物。
 (伤害: <color=red>40</color>)
@@ -1141,3 +1142,4 @@ UI_Text_RankingTitle,无限模式排行榜,Infinite Mode Ranking,無限モード
 UI_Text_RankingLoading,加载中..,Loading..,ローディング中..,로딩 중..,載入中..,Загрузка..
 UI_Text_RankingWait,连接失败,Connection Failed,通信エラー,연결 실패,連線中斷,Ошибка соединения
 UI_Text_RankingView,{0}位,#{0},{0}位,{0}위,{0}位 ,#{0}
+UI_Text_DamageView,伤害量,Damage,ダメージ,피해량,傷害量,Урон 
